...
}

class OrderDetailViewcontroller: UIViewController {
    weak var delegate: OrderDetailViewcontrollerDelegate?
    var viewModel: OrderDetailViewModel?
    var detailView: OrderDetailview!
    private var backButton: UIButton!
    
    override func viewDidLoad() {
        super.viewDidLoad()
        self.view.accessibilityIdentifier = "OrderDetail"
        makeView()
        setConstraints()
...
