...
        tableView.panGestureRecognizer.isEnabled = false
        tableView.separatorColor = .clear
        tableView.showsVerticalScrollIndicator = false
        tableView.rowHeight = rowHeight
        tableView.register(OrderCell.self, forCellReuseIdentifier: Cells.orderCell)
        tableView.isScrollEnabled = false
        tableView.accessibilityIdentifier = "ordersTableView"
        tableView.pin(to: view)
        tableView.isHidden = true
    }

    fileprivate func setTableViewDelegates() {
        tableView.delegate = self
...
