...
//  Created by Lucas Silveira on 26/04/21.
//

import UIKit

class LoginHeaderview: UIView {
    private var userNameLabel: UILabel!
    private var ordersLabel: UILabel!
    private var ordersAmountLabel: UILabel!
    private var userName: String
    private var ordersSum: String
    private var ordersDescription: String
    
...
